# out-of-tree-driver-demo

./: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  west.yml
.devcontainer/: Dockerfile  devcontainer.json  initial-steps.sh  post-create.sh  west.yml
.devcontainer/scripts/: placeholder.sh
samples/magcard-zephyr-rm3100-sample/: CMakeLists.txt  prj.conf  sample.yml
samples/magcard-zephyr-rm3100-sample/boards/: rpi_pico.overlay
samples/magcard-zephyr-rm3100-sample/notes/: build-and-flash-notes.md  reference-materials-rm3100.md  rm3100-api-differences.md
samples/magcard-zephyr-rm3100-sample/src/: main.c
scripts/: compile-for-lpc55s69-cpu0.sh  devcontainer-helper.sh  flash-manually.sh  jlink-flash.sh  runner-cpu0.jlink  start-devcontainer.sh  uf2-flash.sh
src/: development-flags.h  main.c
